--- a/assets/sass/custom/theme/_home.scss
+++ b/assets/sass/custom/theme/_home.scss
@@ -1,6 +1,125 @@
 /* Home
 ================================================ */
 
-#wrapper.home {
+@charset "UTF-8";
 
+html, body {
+  font-family: "Roboto", sans-serif;
+	font-size: 16px;
+  margin: 0 20px;
+  padding: 0;
+	color: #fff;
+	height: 100%;
+	background: #3f5b71;
+}
+
+#wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+	height: 100%;
+}
+
+h1{
+	margin: 0;
+}
+
+#main-content{
+	text-align: center;
+	margin: 0;
+	margin-top: 53px;
+	padding-bottom: 150px;
+	font-size: 22px;
+}
+
+#main-content strong {
+  color: #ffa900;
+  font-weight: bold;
+}
+
+.social {
+  padding-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #3f5b71;
+    font-size: 2.5rem;
+    background: white;
+    text-decoration: none;
+    border-radius: 20px;
+    height: 4rem;
+    width: 4rem;
+    margin: 0 .5rem 0 .5rem;
+  }
+
+  .social a:hover {
+      color: #ffa900;
+    }
+
+#page-footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	margin: 15px 0 0;
+	font-size: 16px;
+	color: #fff;
+  background: #ffa900;
+  border-top: 2px solid white;
+}
+
+#page-footer div{
+	width: 49%;
+	margin: 0 auto;
+}
+
+#page-footer p{
+	padding: 20px 40px 30px;
+	margin: 0;
+}
+
+@media (max-width: 980px) {
+	html, body {
+		background-size: 100%;
+	}
+
+  #main-content {
+    font-size: 16px;
+  }
+
+	#page-header h1 img {
+		position: relative;
+		height: 220px;
+	}
+
+
+	#main-content {
+		margin: 0;
+		padding-bottom: 10px;
+	}
+
+}
+
+@media (max-width: 360px) {
+	#page-header h2 {
+		margin: 0;
+	}
+
+	#main-content {
+		margin: 0;
+    font-size: 14px;
+	}
+
+	#page-footer {
+		margin: 0;
+	}
 }
