--- a/assets/sass/custom/theme/_colors.scss
+++ b/assets/sass/custom/theme/_colors.scss
@@ -2,3 +2,8 @@
 ================================================ */
 
 $black: #000;
+$dark: #2A3740;
+$turquoise: #43D9BD;
+$dark_turquoise: #1D594E;
+$light_turquoise: #41D9AE;
+$creme: #D99F7E;
