--- a/assets/sass/custom/theme/_header.scss
+++ b/assets/sass/custom/theme/_header.scss
@@ -3,4 +3,121 @@
 
 header#page-header {
 
+  #prenav {
+    padding: 1rem 0;
+    background-color: $dark;
+    border-bottom: 2px solid $turquoise;
+
+    .social {
+      a {
+        font-size: 2rem;
+
+        &:hover {
+          color: $turquoise;
+        }
+      }
+    }
+  }
+
+  #nav {
+    box-shadow: -5px 1px 5px $turquoise;
+    padding: 1rem 0;
+    background-color: $dark;
+
+      img {
+        width: 8rem;
+      }
+
+      .uk-navbar-item {
+          .menu {
+            overflow: inherit;
+
+              .menu-item {
+                position: relative;
+
+                  &.current-menu-item {
+                      a {
+                        color: $turquoise;
+                      }
+                  }
+              }
+          }
+      }
+
+      .uk-navbar-left {
+          .uk-logo {
+              max-width: 250px;
+          }
+
+          .uk-navbar-toggle-icon {
+              color: $turquoise;
+          }
+      }
+
+
+      .uk-navbar-right {
+          a {
+              position: relative;
+              font-weight: 500;
+              max-width: 250px;
+              display: inline-block;
+
+              &:hover {
+                color: $turquoise;
+              }
+          }
+      }
+  }
+}
+
+#menu-mobile {
+    .uk-offcanvas-bar {
+        padding: 0;
+        font-size: 2rem;
+        display: flex;
+        flex-direction: column;
+        background-color: $dark;
+
+        ul {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+
+            a {
+                text-decoration: none;
+                color: white;
+            }
+        }
+
+        #mobile-nav {
+            flex-grow: 1;
+            list-style: none;
+            margin: 2rem 0;
+
+            > li {
+                &.current-menu-item {
+                    background-color: $turquoise;
+
+                    a {
+                      color: white;
+                    }
+                }
+
+                a {
+                    padding: 1.5rem 3rem;
+                    display: block;
+                    background-color: transparent;
+                    background: linear-gradient(to right, $turquoise 50%, transparent 50%);
+                    background-position: right bottom;
+                    background-size: 220% 100%;
+                    background-repeat: no-repeat;
+                    transition: .2s;
+
+                    &:hover {
+                        background-position: left bottom;
+                    }
+                }
+            }
+        }
+    }
 }
