--- a/assets/sass/custom/theme/_header.scss
+++ b/assets/sass/custom/theme/_header.scss
@@ -26,6 +26,11 @@ header#page-header {
 
       img {
         width: 8rem;
+        transition: transform 1s ease-in-out;
+
+        &:hover {
+          transform: rotate(360deg);
+        }
       }
 
       .uk-navbar-item {
