--- a/assets/sass/custom/theme/_footer.scss
+++ b/assets/sass/custom/theme/_footer.scss
@@ -14,6 +14,7 @@
         a {
           color: white;
           font-size: 5rem;
+          text-decoration: none;
 
           &:hover {
             color: $light_turquoise;
