--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -23,3 +23,5 @@
 /*  Components
 ================================================ */
 @import "custom/components/nav";
+@import "custom/components/title";
+@import "custom/components/modo";
