--- a/assets/sass/custom/theme/_fonts.scss
+++ b/assets/sass/custom/theme/_fonts.scss
@@ -3,3 +3,6 @@
 
 /* Montserrat */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700');
+
+/* Corner Store JF */
+@import url("https://use.typekit.net/ggx5veo.css");
