--- a/assets/sass/custom/theme/_variables.scss
+++ b/assets/sass/custom/theme/_variables.scss
@@ -17,6 +17,13 @@ $transition: all 0.2s ease-in-out;
 
 %texte {
   font-family: 'Montserrat', sans-serif;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  color: white;
+}
+
+%title {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 5rem;
+  font-weight: bold;
   color: white;
 }
