--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -25,3 +25,4 @@
 @import "custom/components/nav";
 @import "custom/components/title";
 @import "custom/components/modo";
+@import "custom/components/partenaires";
