--- a/assets/sass/custom/theme/_fonts.scss
+++ b/assets/sass/custom/theme/_fonts.scss
@@ -4,5 +4,8 @@
 /* Montserrat */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700');
 
+/* Roboto */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 /* Corner Store JF */
 @import url("https://use.typekit.net/ggx5veo.css");
