--- a/assets/sass/custom/components/_modo.scss
+++ b/assets/sass/custom/components/_modo.scss
@@ -14,6 +14,7 @@
       h3 {
         margin-top: 10px;
         @extend %texte;
+        font-family: 'Montserrat', sans-serif;
         color: $turquoise;
         font-size: 3rem;
       }
