--- a/assets/sass/custom/theme/_variables.scss
+++ b/assets/sass/custom/theme/_variables.scss
@@ -16,7 +16,7 @@ $transition: all 0.2s ease-in-out;
 }
 
 %texte {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1.5rem;
   color: white;
 }
@@ -26,4 +26,43 @@ $transition: all 0.2s ease-in-out;
   font-size: 5rem;
   font-weight: bold;
   color: white;
+}
+
+%button {
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: none;
+    background-color: $dark;
+    background: linear-gradient(to right, $turquoise 50%, $dark 50%);
+    background-position: right bottom;
+    background-size: 220% 100%;
+    background-repeat: no-repeat;
+    border: 2px solid $turquoise;
+    display: inline-block;
+    transition: $transition;
+    padding: 0.5rem 1rem 0.5rem 2rem;
+    overflow: hidden;
+    box-shadow:0px 0px 7px $turquoise;
+
+    i {
+        position: relative;
+        left: -10px;
+        font-size: 2rem;
+        opacity: 0;
+        transition: $transition;
+        vertical-align: middle;
+    }
+
+    &:hover, &:focus {
+        background-position: left bottom;
+        border: 2px solid $turquoise;
+        color: white;
+
+        i {
+            opacity: 1;
+            left: 0;
+        }
+    }
 }
