Fix + add annimation using AOS Library

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Gogo08
-Author: Gogo08
+Author: Gogo08 - youtube.com/user/gogo08190
 Version: 1.0.0
 License: GPL-2.0-or-later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
