Page vidéos / playlist

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -14,6 +14,7 @@
 @import "custom/theme/global";
 @import "custom/theme/header";
 @import "custom/theme/home";
+@import "custom/theme/video";
 @import "custom/theme/page";
 @import "custom/theme/footer";
 
@@ -26,3 +27,4 @@
 @import "custom/components/title";
 @import "custom/components/modo";
 @import "custom/components/partenaires";
+@import "custom/components/videos";
