--- a/assets/sass/custom/theme/_video.scss
+++ b/assets/sass/custom/theme/_video.scss
@@ -14,6 +14,8 @@
     padding: 5rem 0;
 
     .list_playlist {
+      padding-top: 5rem;
+      
       .button {
         padding-top: 5rem;
         .uk-button {
