Add home backoffice + decor

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -28,3 +28,4 @@
 @import "custom/components/modo";
 @import "custom/components/partenaires";
 @import "custom/components/videos";
+@import "custom/components/decor";
