--- a/assets/sass/custom/theme/_global.scss
+++ b/assets/sass/custom/theme/_global.scss
@@ -2,14 +2,15 @@
 ================================================ */
 
 html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
   font-family: 'Montserrat', sans-serif;
   font-size: 62.5%;
   font-weight: normal;
+  margin: 0;
+  padding: 0;
   line-height: 1.5;
   color: black;
+  scroll-behavior: smooth;
+  height: 100%;
   background-color: $dark;
 
   ::selection {
