--- a/assets/sass/custom/theme/_header.scss
+++ b/assets/sass/custom/theme/_header.scss
@@ -20,7 +20,7 @@ header#page-header {
   }
 
   #nav {
-    box-shadow: -5px 1px 5px $turquoise;
+    box-shadow: 0 2px 5px $turquoise;
     padding: 1rem 0;
     background-color: $dark;
 
