--- a/assets/sass/custom/theme/_home.scss
+++ b/assets/sass/custom/theme/_home.scss
@@ -5,6 +5,10 @@
   #top {
     padding: 5rem 0;
 
+    .title {
+      padding-bottom: 3rem;
+    }
+
     .twitch_player {
       padding-bottom: 3rem;
     }
