--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -15,6 +15,7 @@
 @import "custom/theme/header";
 @import "custom/theme/home";
 @import "custom/theme/video";
+@import "custom/theme/modpack";
 @import "custom/theme/contact";
 @import "custom/theme/page";
 @import "custom/theme/footer";
