--- a/assets/sass/custom/theme/_fonts.scss
+++ b/assets/sass/custom/theme/_fonts.scss
@@ -7,5 +7,8 @@
 /* Roboto */
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-/* Corner Store JF */
-@import url("https://use.typekit.net/ggx5veo.css");
+/* Kaushan Script */
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+
+/* Fredoka One */
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
