--- a/assets/sass/custom/theme/_modpack.scss
+++ b/assets/sass/custom/theme/_modpack.scss
@@ -26,6 +26,8 @@
           font-size: 4rem;
 
           span {
+            font-family: 'Fredoka One', cursive;
+            font-weight: normal;
             color: $turquoise;
             font-size: 3rem;
           }
