--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -16,6 +16,7 @@
 @import "custom/theme/home";
 @import "custom/theme/video";
 @import "custom/theme/modpack";
+@import "custom/theme/about";
 @import "custom/theme/contact";
 @import "custom/theme/page";
 @import "custom/theme/footer";
