--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -17,6 +17,7 @@
 @import "custom/theme/video";
 @import "custom/theme/modpack";
 @import "custom/theme/about";
+@import "custom/theme/config";
 @import "custom/theme/contact";
 @import "custom/theme/page";
 @import "custom/theme/footer";
