--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -19,6 +19,7 @@
 @import "custom/theme/about";
 @import "custom/theme/config";
 @import "custom/theme/contact";
+@import "custom/theme/mentions";
 @import "custom/theme/page";
 @import "custom/theme/footer";
 
