Anim fix + Page error

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -21,6 +21,7 @@
 @import "custom/theme/contact";
 @import "custom/theme/mentions";
 @import "custom/theme/page";
+@import "custom/theme/error";
 @import "custom/theme/footer";
 
 // Responsive
