--- a/assets/sass/custom/theme/_global.scss
+++ b/assets/sass/custom/theme/_global.scss
@@ -24,6 +24,18 @@ html, body {
   }
 }
 
+#wrapper {
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+
+  main {
+    flex-grow: 1;
+  }
+}
+
 /* Let's get this party started */
 ::-webkit-scrollbar {
     width: 12px;
