Page actu style

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -36,3 +36,4 @@
 @import "custom/components/videos";
 @import "custom/components/decor";
 @import "custom/components/form";
+@import "custom/components/actu";
