Page list actus

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -18,6 +18,7 @@
 @import "custom/theme/modpack";
 @import "custom/theme/about";
 @import "custom/theme/config";
+@import "custom/theme/actus";
 @import "custom/theme/contact";
 @import "custom/theme/mentions";
 @import "custom/theme/page";
@@ -37,3 +38,4 @@
 @import "custom/components/decor";
 @import "custom/components/form";
 @import "custom/components/actu";
+@import "custom/components/actus";
