--- a/assets/sass/custom/components/_actu.scss
+++ b/assets/sass/custom/components/_actu.scss
@@ -103,5 +103,32 @@
         text-align: center;
       }
     }
+
+    .share {
+      .share-button-wrapper {
+        border: 4px solid $turquoise;
+        box-shadow:0px 0px 20px $turquoise;
+        display: inline-block;
+        padding: 1rem;
+      }
+      span {
+        text-transform: uppercase;
+        @extend %texte;
+        font-size: 2rem;
+      }
+
+      a {
+        color: white;
+        font-size: 2rem;
+        margin-left: 1rem;
+        position: relative;
+        top: .125rem;
+        transition: $transition;
+
+        &:hover {
+          color: $turquoise;
+        }
+      }
+    }
   }
 }
