--- a/assets/sass/custom/components/_actus.scss
+++ b/assets/sass/custom/components/_actus.scss
@@ -27,6 +27,7 @@
     }
 
     .uk-card-media-top {
+      position: relative;
       img {
         width: 100%;
         border-top-left-radius: 20px 20px;
@@ -63,6 +64,24 @@
         position: absolute;
         bottom: 10px;
         right: 10px;
+      }
+    }
+    .tag {
+      position: absolute;
+      padding-bottom: 1rem;
+      left: 0;
+      top: 2rem;
+
+      p {
+        @extend %texte;
+        color: white;
+        font-weight: 500;
+        margin: 0;
+        background: $turquoise;
+        padding: .1rem 2rem .2rem 2rem;
+        border-top-right-radius: 2rem 2rem;
+        border-bottom-right-radius: 20px 20px;
+        text-align: center;
       }
     }
   }
