Roulette du ban

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -20,6 +20,7 @@
 @import "custom/theme/config";
 @import "custom/theme/actus";
 @import "custom/theme/contact";
+@import "custom/theme/roulette";
 @import "custom/theme/mentions";
 @import "custom/theme/page";
 @import "custom/theme/error";
